AWS/pod-web/back/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web
    tier: back
spec:
  type: NodePort
  selector:
    app: web-deployment
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31111
